# dropsort

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCH.md  COLLABORATION.md  DECISIONS.md  Dockerfile  LICENSES.md  README.md  RUNBOOK.md  SECURITY.md  SUBMISSION.md  alembic.ini  docker-compose.yml  mypy.ini  phases-split.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_empty.py  0002_schema_and_seed.py  0003_users_deleted_at.py  0004_users_original_email.py  0005_casbin_batches_upload.py  0006_casbin_prediction_overlay.py  0007_casbin_admin_prediction_patch.py
app/: __init__.py  main.py
app/api/: __init__.py  admin.py  audit.py  auth.py  batches.py  deps.py  health.py  predictions.py  users.py
app/classifier/: __init__.py  boot_checks.py  classify.py  runtime.py
app/core/: __init__.py  boot_checks.py  config.py  errors.py  logging.py  request_id.py  vault.py
app/db/: __init__.py  models.py  session.py
app/domain/: __init__.py  audit.py  batch.py  prediction.py  user.py
app/infra/: __init__.py  minio_storage.py  queue.py  sftp_client.py
app/pipeline/: __init__.py  tiff_ingest.py
app/repositories/: __init__.py  audit_repository.py  batch_repository.py  prediction_repository.py  user_repository.py
app/services/: __init__.py  audit_service.py  auth_service.py  batch_service.py  batch_upload_service.py  (+3 more)
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
notebook/: classifier_training.ipynb
scripts/: ci_smoke.sh  seed-vault.sh  vault-seed.sh
tests/: conftest.py  test_admin_lifecycle.py  test_audit.py  test_auth.py  test_batch_detail_cache_key.py  test_batch_upload.py  test_cache_invalidation.py  test_grep_gates.py  test_rbac.py  test_relabel.py  test_smoke.py
(+114 files in other folders)
